# UniPass-OpenID-Auth

./: Cargo.toml  README.md
src/: gen_keys.rs  gen_params.rs  main.rs  openid_args.rs  openid_zk_args.rs  prove.rs  verify.rs
